<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrpundimg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activities.InicioApp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/FraceMotivacionalInicio"
        android:textColor="@color/TextoGris"
        android:textSize="20sp"
        />





    <ImageView
        android:layout_width="212dp"
        android:layout_height="181dp"
        android:contentDescription="@string/DescripcionLogo"
        app:srcCompat="@drawable/logosinfondo"
        />

    <!-- Texto superior -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextoBienvenido"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="16dp" />

    <!-- Título principal -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/tan"
        android:letterSpacing="0.1"
        android:text="@string/NombteEmpresa"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- Botón Registrarse -->
    <Button
        android:id="@+id/BtnRegistroInicioPage"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:text="@string/TextoBtnRegistrarse"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/backgroundColo"
        android:layout_marginBottom="16dp"

      />

    <!-- Botón Iniciar sesión -->
    <Button
        android:id="@+id/BtnIniciarSecionInicioPage"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:text="@string/TextoBtniniciar_secion"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"

   />



</LinearLayout>