<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrpundimg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".auth.Registro">

    <ScrollView
        android:id="@+id/ScrollRegistro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Texto superior -->
            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/FraseMotivacionalDos"
                android:textColor="@color/TextoGris"
                android:textSize="20sp" />

            <!-- LOGO -->
            <ImageView
                android:id="@+id/LogoLogIn"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/logosinfondo"
                android:contentDescription="@string/logo"/>



            <!-- Email -->
            <TextView
                android:id="@+id/NombreEmpresaRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/tan"
                android:text="@string/NombteEmpresa"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <EditText
                android:id="@+id/InputEmailRegistro"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/style_edit_text"
                android:hint="@string/TextEmail"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="1dp"
                android:textColor="@color/TextoGris" />

            <!-- Contraseña -->
            <EditText
                android:id="@+id/InputContrasenaRegistro"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/style_edit_text"
                android:hint="@string/TextContrasena"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="1dp"
                android:textColor="@color/TextoGris" />

            <!-- Confirmar contraseña -->
            <EditText
                android:id="@+id/ImputRepConRegistro"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/style_edit_text"
                android:hint="@string/TextConfirmarContraSena"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="1dp"
                android:textColor="@color/TextoGris" />

            <!-- Botón principal -->
            <Button
                android:id="@+id/ButtonComenzarRegistro"
                android:layout_width="250dp"
                android:layout_height="56dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/backgroundColo"
                android:text="@string/TextBotonRegistro"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <!-- Texto secundario -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/continua_conText"
                android:textColor="@color/backgroundColo"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <!-- Iconos redes -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                   android:id="@+id/ButtonGoogle"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_margin="8dp"
                    android:text=""
                    app:icon="@drawable/googlelogo"                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="@null"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="16dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ButtonFacebook"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_margin="8dp"
                    android:text=""
                    app:icon="@drawable/facebooklogo"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="@null"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="16dp"/>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>