<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/backgrpundimg"
android:gravity="center"
android:orientation="vertical"
tools:context=".Activities.RecuperarContrasena">

<ScrollView
    android:id="@+id/ScrollRecupContra"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/containerRecupContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Texto superior -->
        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/fraceMotivacional5"
            android:textColor="@color/TextoGris"
            android:textSize="20sp" />

        <!-- LOGO -->
        <ImageView
            android:id="@+id/LogoRecupContra"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/logosinfondo"
            android:contentDescription="Logo"/>


        <!-- Contraseña -->
        <EditText
            android:id="@+id/InputContrasenaRecupContra"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/style_edit_text"
            android:hint="@string/TextContrasena"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="1dp"
            android:textColor="@color/TextoGris" />

        <!-- Confirmar contraseña -->
        <EditText
            android:id="@+id/InputRepConRecupContra"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/style_edit_text"
            android:hint="@string/TextConfirmarContraSena"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="1dp"
            android:textColor="@color/TextoGris" />

        <!-- Botón principal -->
        <Button
            android:id="@+id/ButtonCambiarContra"
            android:layout_width="250dp"
            android:layout_height="56dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/backgroundColo"
            android:text="@string/TextCambiarContrasena"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>

</ScrollView>

</LinearLayout>